--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  modal_progress_hud: ^0.1.3
+  modal_progress_hud_nsn: ^0.5.1
+  
 
 dev_dependencies:
   build_runner: ^2.4.8
